Updated jumbotron text, fixed welcome alignment in navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@
      width: 300px;
      min-height: 200px;
  }
+ h1 {text-align: center;}
 
 /* CSS */
 .button-60 {
